--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel='stylesheet' href='./styles.css'/>
 </head>
 <body>
-    <div id='logo'>
-        <div class='square'>
+    <div class='container'>
+        <div id='logo'>
+            <div class='square'>
+                <div class='square'></div>
+            </div>
             <div class='square'></div>
         </div>
-        <div class='square'></div>
     </div>
 </body>
 </html>
